fix --color-bg-element on dark mode

--- a/assets/css/custom-properties.css
+++ b/assets/css/custom-properties.css
@@ -37,6 +37,7 @@
   /* stylelint-disable-next-line csstools/media-use-custom-media */
   @media (prefers-color-scheme: dark) {
     --color-bg: #1a1a1a;
+    --color-bg-element: #242424;
     --color-text: #fff;
     --color-title: #fff;
     --color-caption: #707070;
